Bug 493301 - Remove method concatenates strings using + in a loop warnings reported by Sonar (non test code)
Change-Id: I6efd2ee63c04a596c7cd04a90784f67e6919fd3e
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>